--- a/src/work.html
+++ b/src/work.html
@@ -59,16 +59,18 @@
     <section class="work-intro">
       <h2 class="work-intro__title">Mi trabajo</h2>
       <p class="work-intro__paragraph">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit,
-        aspernatur. Ducimus, quidem vitae perspiciatis, magnam ullam libero,
-        ipsam necessitatibus recusandae harum dolores dicta cumque atque
-        nisi unde sed culpa soluta?
+        En mi trabajo trato de dejar patentes mis ideales. Es por ello que pongo mi esfuerzo en crear experiencias que
+        sobre todo sean útiles, pues como se suele decir en este sector, si la experiencia es útil será bonita. Además
+        puedes encontrar en mis proyectos información sobre cómo trabajo y como es el proceso que sigo en el diseño de
+        producto.
       </p>
       <p class="work-intro__paragraph">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit,
-        aspernatur. Ducimus, quidem vitae perspiciatis, magnam ullam libero,
-        ipsam necessitatibus recusandae harum dolores dicta cumque atque
-        nisi unde sed culpa soluta?
+        También te animo a que eches un vistazo en mis perfiles sociales, ya que ahí puedes encontrar más datos sobre
+        mi, mis pasiones y mi trabajo. En mi Medium hablo de manera más profunda sobre el desarrollo de los proyectos,
+        en Behance puedes encontrar otros trabajos míos además de los de diseño de producto, como diseño de branding. En
+        Dribbble puedes ver más sobre mi estilo en lo que se refiere a UI, ya que tengo muchos trabajos ahí.
+        Además te dejo aquí abajo mi curriculum por si quieres saber más de mis skills.
+
       </p>
 
       <p class="work-intro__paragraph work-intro__paragraph--bold">
